--- a/public/index.html
+++ b/public/index.html
@@ -1,112 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JUDE'S TECH VERSE MP3/MP4 PLAYER</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Orbitron:wght@700&display=swap" rel="stylesheet"/>
+  
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
+
+  <!-- Bootstrap CDN -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
   <style>
-    :root {
-      --neon-blue: #0ff0fc;
-      --neon-pink: #ff00ff;
-      --dark-bg: #121212;
-      --text: #ffffff;
-    }
+    /* Neon theme */
     body {
-      background: var(--dark-bg);
-      color: var(--text);
-      font-family: 'Poppins', sans-serif;
-      min-height: 100vh;
-      margin: 0; padding: 0;
-    }
-    .container { max-width: 900px; margin: 2rem auto; }
-    .card {
-      background: rgba(30,30,46,0.8);
-      border-radius: 16px;
-      box-shadow: 0 0 10px var(--neon-blue);
-      border: 1px solid rgba(15,240,252,0.2);
-    }
-    .card-header {
-      background: linear-gradient(90deg, var(--neon-blue), var(--neon-pink));
+      background: #0d0d0d;
+      color: #fff;
       font-family: 'Orbitron', sans-serif;
-      font-size: 1.5rem;
-      text-align: center;
-      padding: 1rem;
-      color: #fff;
     }
-    .btn-boom {
-      background: transparent;
-      color: #fff;
-      border: 2px solid var(--neon-blue);
-      border-radius: 50px;
-      padding: 0.5rem 1.5rem;
+    h1 {
+      color: #0ff;
+      text-align: center;
+      margin-top: 20px;
+      text-shadow: 0 0 10px #0ff, 0 0 20px #0ff, 0 0 30px #0ff;
+    }
+    .container {
+      margin-top: 40px;
+    }
+    .neon-input {
+      background: #111;
+      border: 2px solid #0ff;
+      color: #0ff;
+      border-radius: 8px;
+      padding: 10px;
+      width: 100%;
+      margin-bottom: 20px;
+      outline: none;
+    }
+    .neon-button {
+      background: #0ff;
+      color: #111;
+      border: none;
+      padding: 10px 20px;
+      border-radius: 8px;
+      font-weight: bold;
+      text-transform: uppercase;
       transition: 0.3s;
     }
-    .btn-boom:hover {
-      background: var(--neon-blue);
-      color: #000;
-      box-shadow: 0 0 15px var(--neon-blue), 0 0 25px var(--neon-pink);
+    .neon-button:hover {
+      box-shadow: 0 0 20px #0ff, 0 0 40px #0ff;
     }
-    .form-control {
-      background: rgba(40,40,60,0.7);
-      color: #fff;
-      border: 1px solid rgba(15,240,252,0.3);
-      border-radius: 50px;
-      padding: 0.75rem 1.5rem;
-    }
-    .video-thumbnail {
-      width: 100%;
-      max-width: 320px;
+    .result-box {
+      background: #111;
+      border: 2px solid #0ff;
       border-radius: 8px;
-      margin-bottom: 1rem;
-    }
-    footer {
-      text-align: center;
-      padding: 1rem 0;
-      margin-top: 2rem;
-      font-size: 0.9rem;
-      background: rgba(18,18,18,0.9);
+      padding: 20px;
+      margin-top: 20px;
+      min-height: 200px;
     }
   </style>
 </head>
 <body>
+
+  <h1>JUDE'S TECH VERSE MP3/MP4 PLAYER</h1>
+
   <div class="container">
-    <div class="card">
-      <div class="card-header">JUDE'S TECH VERSE MP3/MP4 PLAYER</div>
-      <div class="card-body text-center">
-        <input id="searchInput" class="form-control mb-3" placeholder="Enter video or audio name..." />
-        <button onclick="searchVideo()" class="btn-boom mb-3">Search</button>
-        <div id="result"></div>
-      </div>
+    <!-- Search -->
+    <input type="text" id="searchInput" class="neon-input" placeholder="Enter YouTube link or search query...">
+    <button class="neon-button w-100" onclick="search()">Search & Convert</button>
+
+    <!-- Results -->
+    <div class="result-box" id="results">
+      <p style="text-align:center; color:#0ff;">Your results will appear here...</p>
     </div>
   </div>
 
-  <footer>
-    © 2025 JUDE'S TECH VERSE
-  </footer>
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
+  <!-- Script to handle frontend interaction -->
   <script>
-    async function searchVideo() {
+    function search() {
       const query = document.getElementById('searchInput').value;
-      if (!query) return alert('Please enter a search term.');
-      const res = await fetch(`/api/search?q=${encodeURIComponent(query)}`);
-      const data = await res.json();
-      if (data.error) return alert(data.error);
-      document.getElementById('result').innerHTML = `
-        <h3>${data.title}</h3>
-        <img src="${data.thumbnail}" class="video-thumbnail"/>
-        <p><strong>Channel:</strong> ${data.channel}</p>
-        <p><strong>Duration:</strong> ${data.duration}</p>
-        <p><strong>Views:</strong> ${data.views}</p>
-        <button onclick="download('${data.url}','audio')" class="btn-boom me-2">Download MP3</button>
-        <button onclick="download('${data.url}','video')" class="btn-boom">Download MP4</button>
-      `;
+      const resultsDiv = document.getElementById('results');
+      
+      if (!query) {
+        resultsDiv.innerHTML = '<p style="color:red; text-align:center;">Please enter a search query or link!</p>';
+        return;
+      }
+
+      resultsDiv.innerHTML = `<p style="text-align:center; color:#0ff;">Searching for: <strong>${query}</strong>...</p>`;
+
+      // TODO: Hook this to your backend API
+      // Example: fetch('/api/search?query=' + encodeURIComponent(query))
+      //   .then(res => res.json())
+      //   .then(data => { renderResults(data); })
+      //   .catch(err => { console.error(err); resultsDiv.innerHTML = "Error fetching results"; });
     }
-    function download(url,type) {
-      window.open(`/api/download?url=${encodeURIComponent(url)}&type=${type}`, '_blank');
+
+    function renderResults(data) {
+      // Example function to display results
+      const resultsDiv = document.getElementById('results');
+      resultsDiv.innerHTML = '';
+
+      data.forEach(item => {
+        const el = document.createElement('div');
+        el.innerHTML = `
+          <p>${item.title}</p>
+          <a href="${item.downloadLink}" class="neon-button">Download</a>
+        `;
+        resultsDiv.appendChild(el);
+      });
     }
   </script>
+
 </body>
 </html>
